Executing "Operator Cheat Sheet" Crashes Blender #86645

Closed
opened 2021-03-16 20:55:46 +01:00 by Ari Sea · 8 comments

System Information
Operating system: macOS-10.14.6-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon R 9 M370X OpenGL Engine ATI Technologies Inc. 4.1 ATI-2.11.23

Blender Version
Broken: version: 2.93.0 Alpha, branch: master (modified), commit date: 2021-03-16 18:59, hash: 3e87d8a431

Short description of error
Executing the operator cheat sheet menu item causes blender to crash, as the title says. Even attempting to execute in the python operator in the console crashes Blender. Since this is the only human-readable error log I could find, here is the blender.crash.txt file: blender.crash.txt

Exact steps for others to reproduce the error

  1. Enable developer extras
  2. Go to Help > Operator Cheat Sheet
  3. Crash
**System Information** Operating system: macOS-10.14.6-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon R 9 M370X OpenGL Engine ATI Technologies Inc. 4.1 ATI-2.11.23 **Blender Version** Broken: version: 2.93.0 Alpha, branch: master (modified), commit date: 2021-03-16 18:59, hash: `3e87d8a431` **Short description of error** Executing the operator cheat sheet menu item causes blender to crash, as the title says. Even attempting to execute in the python operator in the console crashes Blender. Since this is the only human-readable error log I could find, here is the blender.crash.txt file: [blender.crash.txt](https://archive.blender.org/developer/F9895393/blender.crash.txt) **Exact steps for others to reproduce the error** 1. Enable developer extras 2. Go to Help > Operator Cheat Sheet 3. Crash
Author

Added subscriber: @PhlixFer

Added subscriber: @PhlixFer
Member

Added subscribers: @JulianEisel, @HooglyBoogly

Added subscribers: @JulianEisel, @HooglyBoogly
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Thanks for the report! Call stack is right in the middle of outliner code, I assume this is related to the recent refactoring there.

@JulianEisel, maybe for you?

outliner_find_element_with_flag(const ListBase * lb, short flag) (/home/hans/Blender-Git/blender/source/blender/editors/space_outliner/outliner_utils.c:400)
get_target_element(SpaceOutliner * space_outliner) (/home/hans/Blender-Git/blender/source/blender/editors/space_outliner/outliner_tools.c:196)
outliner_id_operation_item_poll(bContext * C, PointerRNA * UNUSED_ptr, PropertyRNA * UNUSED_prop, const int enum_value) (/home/hans/Blender-Git/blender/source/blender/editors/space_outliner/outliner_tools.c:1817)
outliner_id_operation_itemf(bContext * C, PointerRNA * ptr, PropertyRNA * prop, _Bool * r_free) (/home/hans/Blender-Git/blender/source/blender/editors/space_outliner/outliner_tools.c:1880)
RNA_property_enum_items_ex(bContext * C, PointerRNA * ptr, PropertyRNA * prop, const _Bool use_static, const EnumPropertyItem ** r_item, int * r_totitem, _Bool * r_free) (/home/hans/Blender-Git/blender/source/blender/makesrna/intern/rna_access.c:1633)
RNA_property_enum_items(bContext * C, PointerRNA * ptr, PropertyRNA * prop, const EnumPropertyItem ** r_item, int * r_totitem, _Bool * r_free) (/home/hans/Blender-Git/blender/source/blender/makesrna/intern/rna_access.c:1664)
RNA_property_enum_identifier(bContext * C, PointerRNA * ptr, PropertyRNA * prop, const int value, const char ** identifier) (/home/hans/Blender-Git/blender/source/blender/makesrna/intern/rna_access.c:1931)
RNA_property_as_string(bContext * C, PointerRNA * ptr, PropertyRNA * prop, int index, int max_prop_length) (/home/hans/Blender-Git/blender/source/blender/makesrna/intern/rna_access.c:7098)
RNA_pointer_as_string_keywords_ex(bContext * C, PointerRNA * ptr, const _Bool as_function, const _Bool all_args, const _Bool nested_args, const int max_prop_length, PropertyRNA * iterprop) (/home/hans/Blender-Git/blender/source/blender/makesrna/intern/rna_access.c:6850)
RNA_pointer_as_string_keywords(bContext * C, PointerRNA * ptr, const _Bool as_function, const _Bool all_args, const _Bool nested_args, const int max_prop_length) (/home/hans/Blender-Git/blender/source/blender/makesrna/intern/rna_access.c:6877)
WM_operator_pystring_ex(bContext * C, wmOperator * op, const _Bool all_args, const _Bool macro_args, wmOperatorType * ot, PointerRNA * opptr) (/home/hans/Blender-Git/blender/source/blender/windowmanager/intern/wm_operators.c:286)
pyop_as_string(PyObject * UNUSED_self, PyObject * args) (/home/hans/Blender-Git/blender/source/blender/python/intern/bpy_operator.c:402)
cfunction_call(PyObject * func, PyObject * args, PyObject * kwargs) (/home/sybren/buildbot-builder/linux_glibc217_x86_64_cmake/build_deps/deps/build/python/src/external_python/Objects/methodobject.c:548)
_PyObject_MakeTpCall(PyThreadState * tstate, PyObject * callable, PyObject * const * args, Py_ssize_t nargs, PyObject * keywords) (/home/sybren/buildbot-builder/linux_glibc217_x86_64_cmake/build_deps/deps/build/python/src/external_python/Objects/call.c:191)
_PyObject_VectorcallTstate(PyObject * kwnames, size_t nargsf, PyObject * const * args, PyObject * callable, PyThreadState * tstate) (/home/sybren/buildbot-builder/linux_glibc217_x86_64_cmake/build_deps/deps/build/python/src/external_python/Include/cpython/abstract.h:116)
_PyObject_VectorcallTstate(PyObject * kwnames, size_t nargsf, PyObject * const * args, PyObject * callable, PyThreadState * tstate) (/home/sybren/buildbot-builder/linux_glibc217_x86_64_cmake/build_deps/deps/build/python/src/external_python/Include/cpython/abstract.h:103)
PyObject_Vectorcall(PyObject * kwnames, size_t nargsf, PyObject * const * args, PyObject * callable) (/home/sybren/buildbot-builder/linux_glibc217_x86_64_cmake/build_deps/deps/build/python/src/external_python/Include/cpython/abstract.h:127)
call_function(PyObject * kwnames, Py_ssize_t oparg, PyObject *** pp_stack, PyThreadState * tstate) (/home/sybren/buildbot-builder/linux_glibc217_x86_64_cmake/build_deps/deps/build/python/src/external_python/Python/ceval.c:5072)
_PyEval_EvalFrameDefault(PyThreadState * tstate, PyFrameObject * f, int throwflag) (/home/sybren/buildbot-builder/linux_glibc217_x86_64_cmake/build_deps/deps/build/python/src/external_python/Python/ceval.c:3518)
_PyEval_EvalFrame(int throwflag, PyFrameObject * f, PyThreadState * tstate) (/home/sybren/buildbot-builder/linux_glibc217_x86_64_cmake/build_deps/deps/build/python/src/external_python/Include/internal/pycore_ceval.h:40)
Thanks for the report! Call stack is right in the middle of outliner code, I assume this is related to the recent refactoring there. @JulianEisel, maybe for you? ```lines=5 outliner_find_element_with_flag(const ListBase * lb, short flag) (/home/hans/Blender-Git/blender/source/blender/editors/space_outliner/outliner_utils.c:400) get_target_element(SpaceOutliner * space_outliner) (/home/hans/Blender-Git/blender/source/blender/editors/space_outliner/outliner_tools.c:196) outliner_id_operation_item_poll(bContext * C, PointerRNA * UNUSED_ptr, PropertyRNA * UNUSED_prop, const int enum_value) (/home/hans/Blender-Git/blender/source/blender/editors/space_outliner/outliner_tools.c:1817) outliner_id_operation_itemf(bContext * C, PointerRNA * ptr, PropertyRNA * prop, _Bool * r_free) (/home/hans/Blender-Git/blender/source/blender/editors/space_outliner/outliner_tools.c:1880) RNA_property_enum_items_ex(bContext * C, PointerRNA * ptr, PropertyRNA * prop, const _Bool use_static, const EnumPropertyItem ** r_item, int * r_totitem, _Bool * r_free) (/home/hans/Blender-Git/blender/source/blender/makesrna/intern/rna_access.c:1633) RNA_property_enum_items(bContext * C, PointerRNA * ptr, PropertyRNA * prop, const EnumPropertyItem ** r_item, int * r_totitem, _Bool * r_free) (/home/hans/Blender-Git/blender/source/blender/makesrna/intern/rna_access.c:1664) RNA_property_enum_identifier(bContext * C, PointerRNA * ptr, PropertyRNA * prop, const int value, const char ** identifier) (/home/hans/Blender-Git/blender/source/blender/makesrna/intern/rna_access.c:1931) RNA_property_as_string(bContext * C, PointerRNA * ptr, PropertyRNA * prop, int index, int max_prop_length) (/home/hans/Blender-Git/blender/source/blender/makesrna/intern/rna_access.c:7098) RNA_pointer_as_string_keywords_ex(bContext * C, PointerRNA * ptr, const _Bool as_function, const _Bool all_args, const _Bool nested_args, const int max_prop_length, PropertyRNA * iterprop) (/home/hans/Blender-Git/blender/source/blender/makesrna/intern/rna_access.c:6850) RNA_pointer_as_string_keywords(bContext * C, PointerRNA * ptr, const _Bool as_function, const _Bool all_args, const _Bool nested_args, const int max_prop_length) (/home/hans/Blender-Git/blender/source/blender/makesrna/intern/rna_access.c:6877) WM_operator_pystring_ex(bContext * C, wmOperator * op, const _Bool all_args, const _Bool macro_args, wmOperatorType * ot, PointerRNA * opptr) (/home/hans/Blender-Git/blender/source/blender/windowmanager/intern/wm_operators.c:286) pyop_as_string(PyObject * UNUSED_self, PyObject * args) (/home/hans/Blender-Git/blender/source/blender/python/intern/bpy_operator.c:402) cfunction_call(PyObject * func, PyObject * args, PyObject * kwargs) (/home/sybren/buildbot-builder/linux_glibc217_x86_64_cmake/build_deps/deps/build/python/src/external_python/Objects/methodobject.c:548) _PyObject_MakeTpCall(PyThreadState * tstate, PyObject * callable, PyObject * const * args, Py_ssize_t nargs, PyObject * keywords) (/home/sybren/buildbot-builder/linux_glibc217_x86_64_cmake/build_deps/deps/build/python/src/external_python/Objects/call.c:191) _PyObject_VectorcallTstate(PyObject * kwnames, size_t nargsf, PyObject * const * args, PyObject * callable, PyThreadState * tstate) (/home/sybren/buildbot-builder/linux_glibc217_x86_64_cmake/build_deps/deps/build/python/src/external_python/Include/cpython/abstract.h:116) _PyObject_VectorcallTstate(PyObject * kwnames, size_t nargsf, PyObject * const * args, PyObject * callable, PyThreadState * tstate) (/home/sybren/buildbot-builder/linux_glibc217_x86_64_cmake/build_deps/deps/build/python/src/external_python/Include/cpython/abstract.h:103) PyObject_Vectorcall(PyObject * kwnames, size_t nargsf, PyObject * const * args, PyObject * callable) (/home/sybren/buildbot-builder/linux_glibc217_x86_64_cmake/build_deps/deps/build/python/src/external_python/Include/cpython/abstract.h:127) call_function(PyObject * kwnames, Py_ssize_t oparg, PyObject *** pp_stack, PyThreadState * tstate) (/home/sybren/buildbot-builder/linux_glibc217_x86_64_cmake/build_deps/deps/build/python/src/external_python/Python/ceval.c:5072) _PyEval_EvalFrameDefault(PyThreadState * tstate, PyFrameObject * f, int throwflag) (/home/sybren/buildbot-builder/linux_glibc217_x86_64_cmake/build_deps/deps/build/python/src/external_python/Python/ceval.c:3518) _PyEval_EvalFrame(int throwflag, PyFrameObject * f, PyThreadState * tstate) (/home/sybren/buildbot-builder/linux_glibc217_x86_64_cmake/build_deps/deps/build/python/src/external_python/Include/internal/pycore_ceval.h:40)
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2021-03-17 12:26:02 +01:00
Member

Suspect culprit is more like bd973dbc44, will check

Suspect culprit is more like bd973dbc44, will check
Philipp Oeser removed their assignment 2021-03-17 12:41:59 +01:00
Julian Eisel was assigned by Philipp Oeser 2021-03-17 12:41:59 +01:00

This issue was referenced by 20bf736ff8

This issue was referenced by 20bf736ff81c6fb79558796b74d50d4e7a9c8ef6
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#86645
No description provided.